[project]
name = "api-restful-booker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.8.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "httpx>=0.28.1",
    "aiohttp>=3.13.3",
    "pytest-asyncio>=1.3.0",
]
